--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ h2 {
     display: flex;  
     flex-direction: row;
     width: 100%;
+    height: 100%;
     gap: 2rem;
 }
 
@@ -139,6 +140,7 @@ article {
     text-align: center;
     align-content: center;
     background-color: var(--dark-purple);
+    padding: 1rem;
 }
 
 article:hover {
@@ -151,7 +153,6 @@ article:hover {
 
 .articles-text {
     width: 100%;
-
 }
 
 .article-image-1 {
@@ -189,7 +190,7 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     justify-items: center;
-    background-color: var(--blue);
+    background-color: var(--white);
 }
 
 footer > img.logo {
