--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ li:hover {
 main {
     display: flex;
     flex-direction: column;
-    width: 80vw;
+    width: 60vw;
     align-self: center;
     gap: 1.5rem;
 }
@@ -138,7 +138,7 @@ article {
     border: .2rem solid var(--white);
     border-radius: .5rem;
     text-align: center;
-    align-content: center;
+    justify-content: space-between;
     background-color: var(--dark-purple);
     padding: 1rem;
 }
@@ -185,7 +185,7 @@ article:hover {
 footer {
     display: flex;
     flex-direction: row;
-    width: 100%100vw;
+    width: 100%;
     align-self: center;
     justify-content: space-evenly;
     align-items: center;
@@ -194,16 +194,21 @@ footer {
 }
 
 footer > img.logo {
-    transform: scale(.5);
+    /* transform: scale(.25); */
+    width: 25%;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
-footer > p {
+.footer-info {
+    display: flex;
+    gap: 1rem;
     color: var(--resin-black);
     font-size: large;
     font-weight: bolder;
 }
 
-footer > p:hover {
+.footer-info > p:hover {
     cursor: pointer;
 }
 
@@ -211,3 +216,84 @@ p {
     text-align: center;
     align-content: center;
 }
+
+
+@media screen and (max-width: 1350px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+        align-self: center;
+        gap: 1.5rem;
+    }
+  }
+
+@media screen and (max-width: 950px) {
+main {
+    display: flex;
+    flex-direction: column;
+    width: 95vw;
+    align-self: center;
+    gap: 5rem;
+}
+}
+@media screen and (max-width: 700px) {
+main {
+    display: flex;
+    flex-direction: column;
+    width: 95vw;
+    align-self: center;
+    gap: 5rem;
+}
+.main-articles {
+    display: flex;  
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    gap: 2rem;
+}
+.footer-info {
+    display: flex;
+    flex-direction: column;
+    color: var(--resin-black);
+    font-size: large;
+    font-weight: bolder;
+    margin: 0;
+}
+.main-promotion {
+    display: flex;
+    flex-direction: column;
+    height: 50vh;
+    justify-content: space-evenly;
+    border: .2rem solid var(--gold-light);
+    border-radius: .5rem;
+}
+.wedding-ring {
+    width: 100%;
+    height: 50%;
+    background-image: url(assets/jewel-7389356_1280.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    align-self: flex-end;
+}
+}
+
+@media screen and (max-width: 700px) {
+    ul {
+        display: flex;
+        list-style: none;
+        flex-direction: column;
+        align-items:flex-start;
+        justify-content: center;
+        align-content: center;
+        align-self: center;
+        gap: 2rem;
+        margin: 0;
+        padding: 0;
+    }
+    li {
+        margin-left: 1rem;
+    }
+}
+
